; ModuleID = '/home/carl/AnghaBench/freebsd/sys/net80211/extr_ieee80211_crypto.c_ieee80211_crypto_delkey.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/net80211/extr_ieee80211_crypto.c_ieee80211_crypto_delkey.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ieee80211vap = type { i32 }
%struct.ieee80211_key = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ieee80211_crypto_delkey(%struct.ieee80211vap* %0, %struct.ieee80211_key* %1) #0 {
  %3 = alloca %struct.ieee80211vap*, align 8
  %4 = alloca %struct.ieee80211_key*, align 8
  %5 = alloca i32, align 4
  store %struct.ieee80211vap* %0, %struct.ieee80211vap** %3, align 8
  store %struct.ieee80211_key* %1, %struct.ieee80211_key** %4, align 8
  %6 = load %struct.ieee80211vap*, %struct.ieee80211vap** %3, align 8
  %7 = call i32 @ieee80211_key_update_begin(%struct.ieee80211vap* %6)
  %8 = load %struct.ieee80211vap*, %struct.ieee80211vap** %3, align 8
  %9 = load %struct.ieee80211_key*, %struct.ieee80211_key** %4, align 8
  %10 = call i32 @_ieee80211_crypto_delkey(%struct.ieee80211vap* %8, %struct.ieee80211_key* %9)
  store i32 %10, i32* %5, align 4
  %11 = load %struct.ieee80211vap*, %struct.ieee80211vap** %3, align 8
  %12 = call i32 @ieee80211_key_update_end(%struct.ieee80211vap* %11)
  %13 = load i32, i32* %5, align 4
  ret i32 %13
}

declare dso_local i32 @ieee80211_key_update_begin(%struct.ieee80211vap*) #1

declare dso_local i32 @_ieee80211_crypto_delkey(%struct.ieee80211vap*, %struct.ieee80211_key*) #1

declare dso_local i32 @ieee80211_key_update_end(%struct.ieee80211vap*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
